index page modified and login signup pages added

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="center-text">
                             <h4>Blogging the Tech world</h3>
                             <h1>Blogger Project</h1>
-                            <button class="btn" id="explore"><a id="explorebtn" href="#">Explore</a></button> 
+                            <a class="explorebtn" href="#">Explore</a>
                         </div>    
                     </div>
 
@@ -70,7 +70,7 @@
                 <div class="container-main">
                     <div class="latest-posts">
                         <div class="heading-latest-post">
-                            <h2><a href="latest-posts.html" style="color: black;">LATEST POSTS</a></h2>
+                            <h2><a href="latest-posts.html" style="color: black; margin-left: 20px;">LATEST POSTS</a></h2>
                         </div>
                         <div class="list-post-latest">
                             <a href="#">
@@ -94,29 +94,30 @@
                               adipisci iusto totam placeat corrupti ipsum</p>
                                 </div>
                             </a>
+                            <a href="#">
+                                <div class="list-post">
+                                <h3>Heading of the Post</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptas deserunt beatae
+                              adipisci iusto totam placeat corrupti ipsum</p>
+                                </div>
+                            </a>
+                            <a href="#">
+                                <div class="list-post">
+                                <h3>Heading of the Post</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptas deserunt beatae
+                              adipisci iusto totam placeat corrupti ipsum</p>
+                                </div>
+                            </a>
+                            <a href="#">
+                                <div class="list-post">
+                                <h3>Heading of the Post</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptas deserunt beatae
+                              adipisci iusto totam placeat corrupti ipsum</p>
+                                </div>
+                            </a>
                         </div>
-                        <div class="list-post-latest">
-                            <a href="#">
-                                <div class="list-post">
-                                <h3>Heading of the Post</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptas deserunt beatae
-                              adipisci iusto totam placeat corrupti ipsum</p>
-                                </div>
-                            </a>
-                            <a href="#">
-                                <div class="list-post">
-                                <h3>Heading of the Post</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptas deserunt beatae
-                              adipisci iusto totam placeat corrupti ipsum</p>
-                                </div>
-                            </a>
-                            <a href="#">
-                                <div class="list-post">
-                                <h3>Heading of the Post</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptas deserunt beatae
-                              adipisci iusto totam placeat corrupti ipsum</p>
-                                </div>
-                            </a>
+                        <div class="see-all-latest-posts">
+                            <a href="latest-posts.html"><h3>See all Latest Posts</h3></a>
                         </div>
                     </div>
                     <div class="popular-posts">
@@ -154,11 +155,12 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia atque nemo ad modi officiis
                             iure, autem nulla tenetur repellendus.</p>
                     </div>
-                    <div class="newsletter" data-aos="fade-right" data-aos-delay="200">
+                    <div class="newsletter">
                         <h2>Newsletter</h2>
                         <p>Stay update with our latest</p>
                         <div class="form-element">
-                            <input type="text" placeholder="Email"><span class="next"><ion-icon name="arrow-forward-outline"></ion-icon></span>
+                            <input type="text" placeholder="Email"><span class="next">
+                            <ion-icon name="arrow-forward-outline"></ion-icon></span>
                         </div>
                     </div>
                     <div class="instagram" data-aos="fade-left" data-aos-delay="200">
@@ -167,8 +169,6 @@
                             <img src="img/instagram/thumb-card3.png" alt="insta1">
                             <img src="img/instagram/thumb-card4.png" alt="insta2">
                             <img src="img/instagram/thumb-card5.png" alt="insta3">
-                        </div>
-                        <div class="flex-row">
                             <img src="img/instagram/thumb-card6.png" alt="insta4">
                             <img src="img/instagram/thumb-card7.png" alt="insta5">
                             <img src="img/instagram/thumb-card8.png" alt="insta6">
