Latest-posts page responsive

--- a/latest-posts.html
+++ b/latest-posts.html
@@ -197,32 +197,31 @@
         
         <footer class="footer">
                 <div class="container">
-                    <div class="about-us" data-aos="fade-right" data-aos-delay="200">
+                    <div class="about-us foot" data-aos="fade-right" data-aos-delay="200">
                         <h2>About us</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia atque nemo ad modi officiis
                             iure, autem nulla tenetur repellendus.</p>
                     </div>
-                    <div class="newsletter" data-aos="fade-right" data-aos-delay="200">
+                    <div class="newsletter foot">
                         <h2>Newsletter</h2>
                         <p>Stay update with our latest</p>
                         <div class="form-element">
-                            <input type="text" placeholder="Email"><span class="next"><ion-icon name="arrow-forward-outline"></ion-icon></span>
+                            <input type="text" placeholder="Email"><span class="next">
+                            <ion-icon name="arrow-forward-outline"></ion-icon></span>
                         </div>
                     </div>
-                    <div class="instagram" data-aos="fade-left" data-aos-delay="200">
+                    <div class="instagram foot" data-aos="fade-left" data-aos-delay="200">
                         <h2>Instagram</h2>
                         <div class="flex-row">
                             <img src="img/instagram/thumb-card3.png" alt="insta1">
                             <img src="img/instagram/thumb-card4.png" alt="insta2">
                             <img src="img/instagram/thumb-card5.png" alt="insta3">
-                        </div>
-                        <div class="flex-row">
                             <img src="img/instagram/thumb-card6.png" alt="insta4">
                             <img src="img/instagram/thumb-card7.png" alt="insta5">
                             <img src="img/instagram/thumb-card8.png" alt="insta6">
                         </div>
                     </div>
-                    <div class="follow" data-aos="fade-left" data-aos-delay="200">
+                    <div class="follow foot" data-aos="fade-left" data-aos-delay="200">
                         <h2>Follow us</h2>
                         <p>Let us be Social</p>
                         <div class="social-links">
@@ -235,7 +234,7 @@
                 </div>
                 <div class="rights flex-row">
                     <h4 class="text-gray" id="copyrighttext">
-                        Copyright ©2020 | Blooger Project Team-A 
+                        Copyright ©2020 | Blogger Project Team-A 
                     </h4>
                 </div>
             </footer>
