--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <div class="list-post">
                                 <img src="src/css/blogpost.jpg">
                                 <h3>Heading of the Post<br><span style="font-size: 80%;">- userName</span></h3>
-                                <p>Lorem ipsum dolor sit amet con dolor sit amet con...</p>
+                                <p>heloooo jhasb jsahd ajsbd</p>
                                 </div>
                             </a>
                             <a href="#fullPost">
@@ -121,7 +121,7 @@
                         </div>
                             <a href="#fullPost">
                                 <div class="list-post-popular">
-                                <h3>Heading of the Post</h3>
+                                <h3>First post</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque voluptas deserunt beatae
                               adipisci iusto totam placeat corrupti ipsum</p>
                                 </div>
